istio/api-snowdepth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-snowdepth-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/graphql"
    rewrite:
      uri: "/api/graphql"
    route:
    - destination:
        host: api-snowdepth-service.iot.svc.cluster.local
        port:
          number: 80
