istio/api-temperature-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-temperature-dr
  namespace: iot
spec:
  host: api-temperature-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
