istio/api-temperature-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-temperature-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/temperature/"
    rewrite:
      uri: "/api/temperature/"
    route:
    - destination:
        host: api-temperature-service.iot.svc.cluster.local
        port:
          number: 80
