istio/snowdepth-usergui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: snowdepth-usergui-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/snowdepth/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: snowdepth-usergui-service.iot.svc.cluster.local
        port:
          number: 80
